--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -57,9 +57,10 @@ footer.main-footer .footer-text a:hover {
 
 /* 网格背景 */
 .io-grey-mode .page-container .grid-bg {
-    background-image: linear-gradient(rgba(50, 0, 0, 0.05) 1px, transparent 0), linear-gradient(90deg, rgba(50, 0, 0, 0.05) 1px, transparent 0); 
+    /*background-image: linear-gradient(rgba(50, 0, 0, 0.05) 1px, transparent 0), linear-gradient(90deg, rgba(50, 0, 0, 0.05) 1px, transparent 0); */
     background-size: 15px 15px;
-    background-color: #d8d8d8;
+    /*background-color: #d8d8d8;*/
+    background-color: #f2f2f2;
 }
 
 
