--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,16 +195,69 @@ a>i.sidebar-more{transform:scale(.8)}
 .overflowClip_1{overflow:hidden;-o-text-overflow:ellipsis;text-overflow:ellipsis;word-break:break-all;display:-webkit-box!important;-webkit-line-clamp:1;-webkit-box-orient:vertical}
 .overflowClip_1{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;display:block!important}
 .overflowClip_2{overflow:hidden;-o-text-overflow:ellipsis;text-overflow:ellipsis;word-break:break-all;display:-webkit-box!important;-webkit-line-clamp:2;-webkit-box-orient:vertical}
-.url-card .url-body{transform:translateY(0px);-webkit-transform:translateY(0px);-moz-transform:translateY(0px);-webkit-transition:all 0.3s ease;-moz-transition:all 0.3s ease;-o-transition:all 0.3s ease;transition:all 0.3s ease}
-.url-card .url-body:hover{transform:translateY(-6px);-webkit-transform:translateY(-6px);-moz-transform:translateY(-6px);box-shadow:0 26px 40px -24px rgba(0,36,100,.3);-webkit-box-shadow:0 26px 40px -24px rgba(0,36,100,.3);-moz-box-shadow:0 26px 40px -24px rgba(0,36,100,.3)}
-.url-card .url-like{position:absolute;top:5px;right:10px;opacity:0;transition:opacity .3s}
+.url-card .url-body{
+    transform:translateY(0px);
+    -webkit-transform:translateY(0px);
+    -moz-transform:translateY(0px);
+    -webkit-transition:all 0.3s ease;
+    -moz-transition:all 0.3s ease;
+    -o-transition:all 0.3s ease;
+    transition:all 0.3s ease
+}
+.url-card .url-body:hover{
+    transform:translateY(-6px);
+    -webkit-transform:translateY(-6px);
+    -moz-transform:translateY(-6px);
+    box-shadow:0 26px 40px -24px rgba(0,36,100,.3);
+    -webkit-box-shadow:0 26px 40px -24px rgba(0,36,100,.3);
+    -moz-box-shadow:0 26px 40px -24px rgba(0,36,100,.3)
+}
+.url-card .url-like{
+    position:absolute;
+    top:5px;
+    right:10px;
+    opacity:0;
+    transition:opacity .3s;
+}
 .url-card .url-body:hover .url-like{opacity:1}
-.url-card .url-info{overflow:hidden;padding-right:5px}
+.url-card .url-info{
+    overflow:hidden;
+    /*padding-right:5px*/
+}
 .url-card .url-goto-after{height:24px;border-top:1px solid rgba(136,136,136,.2)}
 .url-card .url-goto{position:absolute;bottom:0;left:0px;right:0}
-.url-card .card-body{padding:.938rem}
-.url-card .url-img{width:40px;height:40px;-webkit-box-flex:0;-ms-flex:none;flex:none;background:rgba(255, 255, 255, 0);overflow:hidden;border-radius:5px;}
-.url-card .url-img>img{max-height:100%;vertical-align:unset;}
+.url-card .card-body{
+    padding:.938rem
+}
+.url-card .url-img{
+    width: 100%;
+    height: 100%;
+    -webkit-box-flex:0;
+    -ms-flex:none;
+    flex:none;
+    background:rgba(255, 255, 255, 0);
+    overflow:hidden;
+    border-radius:5px;
+    margin: 0 auto;
+    display: block;
+}
+.url-card .url-img>img{
+    max-height:100%;
+    vertical-align:unset;
+    width: 100%;
+    height: 100%;
+}
+
+.url-card .goto-btn {
+    /*display: inline-block;*/
+    width: 100px;
+    height: 30px;
+    margin: 0 auto;
+    border-radius: 4px;
+    border: solid 1px #666;
+    color: #333;
+}
+
 .url-card .max .url-img{width:60px;height:60px}
 .url-card .mini .url-img{width:25px;height:25px}
 .url-card .post-min .url-img{width:20px;height:20px}
