--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,9 @@ a>i.sidebar-more{transform:scale(.8)}
     overflow:hidden;
     /*padding-right:5px*/
 }
+.url-card .url-info .title {
+    min-height: 42px;
+}
 .url-card .url-goto-after{height:24px;border-top:1px solid rgba(136,136,136,.2)}
 .url-card .url-goto{position:absolute;bottom:0;left:0px;right:0}
 .url-card .card-body{
