--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,10 +224,10 @@ a>i.sidebar-more{transform:scale(.8)}
     overflow:hidden;
     /*padding-right:5px*/
 }
-.url-card .url-info .title {
+.url-card .btn-box .url-info .title {
     min-height: 42px;
 }
-.url-card .url-info .price {
+.url-card .btn-box .url-info .price {
     display: inline-block;
     color: #ff2a2d;
     height: 20px;
@@ -238,22 +238,28 @@ a>i.sidebar-more{transform:scale(.8)}
     padding:.938rem
 }
 .url-card .url-img{
-    width: 100%;
-    height: 100%;
+    width: 60px;
+    height: 60px;
     -webkit-box-flex:0;
     -ms-flex:none;
     flex:none;
     background:rgba(255, 255, 255, 0);
     overflow:hidden;
     border-radius:5px;
-    margin: 0 auto;
-    display: block;
+    margin-right: 5px;
 }
 .url-card .url-img>img{
     max-height:100%;
     vertical-align:unset;
     width: 100%;
     height: 100%;
+}
+
+.url-card .btn-box .url-img {
+    width: 100%;
+    height: 100%;
+    margin-right: 0;
+    display: block;
 }
 
 .url-card .goto-btn {
