--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,11 @@ a>i.sidebar-more{transform:scale(.8)}
     border-radius: 4px;
     border: solid 1px #666;
     color: #333;
+    line-height: 30px;
+}
+.io-black-mode .url-card .goto-btn {
+    border: solid 1px #fff;
+    color: #fff;
 }
 
 .url-card .max .url-img{width:60px;height:60px}
