deploy: ppapi-cn/coco@be148d11baa84db044b09a9c8c524b9da2309b06

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1146,6 +1146,7 @@ input.nav-link:disabled,input.nav-link[readonly]{background-color:transparent;op
 /*--------------------------------------------------------------
 ## black style
 --------------------------------------------------------------*/
+/* 暗黑模式下的背景色 */
 .io-black-mode{background-color:#1b1d1f}
 .io-black-mode .logo-light{display:none!important}
 .io-black-mode .logo-dark{display:initial!important}
